feat: add handler for get list email
